module(
    name = "task_service",
    version = "0.0.2",
)

bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_go", version = "0.45.1")
bazel_dep(name = "rules_oci", version = "1.6.0")
bazel_dep(name = "rules_pkg", version = "0.9.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_go_redis_redismock_v9", "com_github_google_wire", "com_github_grpc_ecosystem_grpc_gateway_v2", "com_github_joho_godotenv", "com_github_redis_go_redis_v9", "com_github_stretchr_testify", "in_gopkg_yaml_v3", "org_golang_google_genproto_googleapis_api", "org_golang_google_genproto_googleapis_rpc", "org_golang_google_grpc", "org_golang_google_protobuf", "org_uber_go_zap")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "distroless_base",
    digest = "sha256:ccaef5ee2f1850270d453fdf700a5392534f8d1a8ca2acda391fbb6a06b81c86",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)

use_repo(oci, "distroless_base")