load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "helper",
    srcs = [
        "error.go",
        "script.go",
        "string.go",
    ],
    importpath = "github.com/0x726f6f6b6965/task/internal/helper",
    visibility = ["//:__subpackages__"],
    deps = [
        "@org_golang_google_genproto_googleapis_rpc//errdetails",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
